@@ -2,6 +2,7 @@
 
 - added: schema options `$.successful(function(response) {})`
 - added: `options.reconnectserver` to `WEBSOCKETCLIENT`
+- added: `req.snapshot(callback(err, request_body))`
 
 - updated: `SchemaOptions` method `$.response([index/operation_name])`, e.g. `$.response('workflow.NAME')`
 - updated: snapshot `startscript.js.json` contains tabs instead of spaces
